--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -834,9 +834,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-NSBI_env]",
+   "display_name": "nsbi_env_newish",
    "language": "python",
-   "name": "conda-env-.conda-NSBI_env-py"
+   "name": "nsbi_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -848,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
