Revert fix of calibration, bug fix of saved calib object

--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -21,13 +21,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jsandesara_umass_edu/.conda/envs/nsbi_env/lib/python3.9/site-packages/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-08-09 16:54:00.668962: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-08-09 16:54:00.682145: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-08-09 16:54:00.693882: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-08-09 16:54:00.697823: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-08-09 16:54:00.707858: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-08-09 17:52:34.290769: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-08-09 17:52:34.303525: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-08-09 17:52:34.315421: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-08-09 17:52:34.319283: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-08-09 17:52:34.329250: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ec064a6c",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "4feb1dfb-0d81-40e0-ac82-c73867c0aa76",
    "metadata": {},
    "outputs": [
@@ -166,43 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b1ea7270-5bf5-4396-8471-6d520d390586",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Name': 'CR',\n",
-       "  'Filter': 'presel_score<-1.0',\n",
-       "  'Variable': 'presel_score',\n",
-       "  'Binning': [-8.747320175170898,\n",
-       "   -6.810490310192108,\n",
-       "   -4.873660445213318,\n",
-       "   -2.9368305802345276,\n",
-       "   -1.0000007152557373]},\n",
-       " {'Name': 'SR_binned',\n",
-       "  'Filter': 'presel_score>4.5',\n",
-       "  'Variable': 'presel_score',\n",
-       "  'Binning': [4.500021934509277, 5.942246437072754]},\n",
-       " {'Name': 'SR',\n",
-       "  'Filter': 'presel_score>=-1.0 & presel_score<=4.5',\n",
-       "  'Variable': None,\n",
-       "  'Binning': None}]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config[\"Regions\"].get"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a80627c5-a251-4a68-bb07-ce38f59f048b",
    "metadata": {},
    "outputs": [],
@@ -218,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "92cec3a8",
    "metadata": {},
    "outputs": [],
@@ -257,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "bf0a4b5b-fa08-4c7c-a240-7353809b67a9",
    "metadata": {},
    "outputs": [
@@ -285,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "5971cfe0-d065-4910-9636-d12e999cbbf0",
    "metadata": {},
    "outputs": [],
@@ -299,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "8966e691-14bb-4c04-8de3-880e5ccea5b6",
    "metadata": {},
    "outputs": [],
@@ -383,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "1973aa36-189e-436d-9b18-add588b946aa",
    "metadata": {},
    "outputs": [
@@ -401,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "5e01aa9b-f7ef-4400-adcf-cee03b97bc0d",
    "metadata": {},
    "outputs": [
@@ -411,7 +375,7 @@
        "['htautau', 'ttbar', 'ztautau']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "4de59bde-2332-4488-be38-62fae1ed4aca",
    "metadata": {},
    "outputs": [],
@@ -513,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "65de9378-0c65-4425-b21b-acef0d2a344f",
    "metadata": {
     "scrolled": true
@@ -523,7 +487,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "starting ensemble training\n"
+      "starting ensemble training\n",
+      "Loading existing model for ensemble member 0\n",
+      "Reading saved models from /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/cached_data/output_training_nominal/output_model_params_htautau/\n"
      ]
     },
     {
@@ -540,33 +506,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of weights of class 0: 0.7496139407157898\n",
-      "Sum of weights of class 1: 0.7500004768371582\n",
-      "Using swish activation function\n"
+      "L 509 calibrator object loaded = [[<nsbi_common_utils.calibration.HistogramCalibrator object at 0x761c8ba31a60>]]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jsandesara_umass_edu/.conda/envs/nsbi_env/lib/python3.9/site-packages/keras/src/layers/core/dense.py:93: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "2025-08-09 17:09:51.251452: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1239 MB memory:  -> device: 0, name: NVIDIA A16, pci bus id: 0000:c7:00.0, compute capability: 8.6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using Callbacks\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-08-09 17:09:52.762509: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "2025-08-09 17:09:52.876296: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:531] Loaded cuDNN version 91100\n"
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'cali_pred'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m process_type \u001b[38;5;129;01min\u001b[39;00m MIX_MODEL_HYPOTHESES:\n\u001b[1;32m      4\u001b[0m     settings \u001b[38;5;241m=\u001b[39m training_settings[process_type]\n\u001b[0;32m----> 6\u001b[0m     \u001b[43mNN_training_mix_model\u001b[49m\u001b[43m[\u001b[49m\u001b[43mprocess_type\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain_ensemble\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43msettings\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     NN_training_mix_model[process_type]\u001b[38;5;241m.\u001b[39mtest_normalization()\n",
+      "File \u001b[0;32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/training.py:281\u001b[0m, in \u001b[0;36mTrainEvaluate_NN.train_ensemble\u001b[0;34m(self, hidden_layers, neurons, number_of_epochs, batch_size, learning_rate, scalerType, calibration, num_bins_cal, callback, callback_patience, callback_factor, activation, verbose, validation_split, holdout_split, plot_scaled_features, load_trained_models, recalibrate_output, num_ensemble_members)\u001b[0m\n\u001b[1;32m    278\u001b[0m     load_trained_models_ensemble_member \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    280\u001b[0m \u001b[38;5;66;03m# Train ensemble NNs with different train/test split each time (bootstrapping without replacement)\u001b[39;00m\n\u001b[0;32m--> 281\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhidden_layers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    282\u001b[0m \u001b[43m            \u001b[49m\u001b[43mneurons\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    283\u001b[0m \u001b[43m            \u001b[49m\u001b[43mnumber_of_epochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    284\u001b[0m \u001b[43m            \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    285\u001b[0m \u001b[43m            \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    286\u001b[0m \u001b[43m            \u001b[49m\u001b[43mscalerType\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    287\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcalibration\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    288\u001b[0m \u001b[43m            \u001b[49m\u001b[43mnum_bins_cal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    289\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcallback\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    290\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcallback_patience\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    291\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcallback_factor\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[43m            \u001b[49m\u001b[43mactivation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    293\u001b[0m \u001b[43m            \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m                 \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    294\u001b[0m \u001b[43m            \u001b[49m\u001b[43mrnd_seed\u001b[49m\u001b[43m                \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mrandom_state_arr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mensemble_index\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    295\u001b[0m \u001b[43m            \u001b[49m\u001b[43mensemble_index\u001b[49m\u001b[43m          \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mensemble_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    296\u001b[0m \u001b[43m            \u001b[49m\u001b[43mvalidation_split\u001b[49m\u001b[43m        \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mvalidation_split\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    297\u001b[0m \u001b[43m            \u001b[49m\u001b[43mholdout_split\u001b[49m\u001b[43m           \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mholdout_split\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    298\u001b[0m \u001b[43m            \u001b[49m\u001b[43mplot_scaled_features\u001b[49m\u001b[43m    \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mplot_scaled_features\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    299\u001b[0m \u001b[43m            \u001b[49m\u001b[43mload_trained_models\u001b[49m\u001b[43m     \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mload_trained_models_ensemble_member\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    300\u001b[0m \u001b[43m            \u001b[49m\u001b[43mrecalibrate_output\u001b[49m\u001b[43m      \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mrecalibrate_output\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/training.py:511\u001b[0m, in \u001b[0;36mTrainEvaluate_NN.train\u001b[0;34m(self, hidden_layers, neurons, number_of_epochs, batch_size, learning_rate, scalerType, calibration, num_bins_cal, callback, callback_patience, callback_factor, activation, verbose, rnd_seed, ensemble_index, validation_split, holdout_split, plot_scaled_features, load_trained_models, recalibrate_output)\u001b[0m\n\u001b[1;32m    508\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhistogram_calibrator[ensemble_index] \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file_calib)\n\u001b[1;32m    509\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL 509 calibrator object loaded = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhistogram_calibrator\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 511\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfull_data_prediction[ensemble_index] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict_with_model\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    512\u001b[0m \u001b[43m                                                                        \u001b[49m\u001b[43mensemble_index\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mensemble_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    513\u001b[0m \u001b[43m                                                                        \u001b[49m\u001b[43muse_log_loss\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muse_log_loss\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    515\u001b[0m \u001b[38;5;66;03m# Else, continue evaluating using the base model\u001b[39;00m\n\u001b[1;32m    516\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    517\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfull_data_prediction[ensemble_index] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict_with_model(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset, \n\u001b[1;32m    518\u001b[0m                                                                         ensemble_index \u001b[38;5;241m=\u001b[39m ensemble_index, \n\u001b[1;32m    519\u001b[0m                                                                         use_log_loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muse_log_loss)\n",
+      "File \u001b[0;32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/training.py:587\u001b[0m, in \u001b[0;36mTrainEvaluate_NN.predict_with_model\u001b[0;34m(self, data, ensemble_index, use_log_loss)\u001b[0m\n\u001b[1;32m    583\u001b[0m     pred \u001b[38;5;241m=\u001b[39m convert_to_score(pred)\n\u001b[1;32m    585\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalibration) \u001b[38;5;241m&\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalibration_switch):\n\u001b[0;32m--> 587\u001b[0m     pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhistogram_calibrator\u001b[49m\u001b[43m[\u001b[49m\u001b[43mensemble_index\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcali_pred\u001b[49m(pred)\n\u001b[1;32m    588\u001b[0m     pred \u001b[38;5;241m=\u001b[39m pred\u001b[38;5;241m.\u001b[39mreshape(pred\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m],)\n\u001b[1;32m    589\u001b[0m     pred \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mclip(pred, \u001b[38;5;241m1e-25\u001b[39m, \u001b[38;5;241m0.9999999\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'cali_pred'"
      ]
     }
    ],
