Basic config writing done with new trained ratios

--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -2100,9 +2100,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NSBI",
+   "display_name": "nsbi_env_newish",
    "language": "python",
-   "name": "nsbi"
+   "name": "nsbi_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2114,7 +2114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
